k8s/apps/dbgate/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbgate
  namespace: lathibandolaise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbgate
  template:
    metadata:
      labels:
        app: dbgate
    spec:
      containers:
        - name: dbgate
          image: dbgate/dbgate
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
