k8s/apps/dbgate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dbgate-service
  namespace: lathibandolaise
spec:
  selector:
    app: dbgate
  ports:
    - port: 3000
      targetPort: 3000
